tests/structs/nonexistent_field.esl.err
[1;31mError:[m No such field 'mum' in struct 'Foo'
   1 | [31m/[m/ error: No such field 'mum' in struct 'Foo'
       ^ [31mNo such field 'mum' in struct 'Foo'[m
